apps/taskManager/appService.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  namespace: task-manager
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
