apps/taskManager/cosmoService.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmo-router
  namespace: task-manager
spec:
  selector:
    app: cosmo-router
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
