apps/taskManager/pgsqlService.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlhub-db
  namespace: task-manager
spec:
  selector:
    app: controlhub-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
